welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: not found: value max
  return max(a,b,c) - min(a,b,c) >= 10
         ^lessBy10:2: error: not found: value min
  return max(a,b,c) - min(a,b,c) >= 10
                      ^